<resources>
    <string name="app_name">RealEstateManager</string>
    <string name="main_activity_description">Vente de biens d\'exception</string>
    <string name="illustrative_picture">Photo d\'illustration</string>
    <string name="map_view">Carte</string>
    <string name="list_view">Liste</string>
    <string name="option_get_place">Option</string>
    <string name="settings">Paramètres</string>
    <string name="exit">Quitter</string>
    <string name="search_property">Recherche</string>
    <string name="property_picture">Photo</string>
    <string name="title"> Real Estate Manager </string>
    <string name="description">Description</string>
    <string name="sold">VENDU</string>
    <string name="sold_label">Sold label</string>
    <string name="description_image">Photo de la description</string>
    <string name="caption">Caption</string>
    <string name="add_property">Ajouter une propriété</string>
    <string name="modify_property">Modifier l\'annonce</string>
    <string name="media">Photos</string>
    <string name="description_exemple">Luxueuse villa qui offre un sanctuaire de sérénité</string>
    <string name="conversion_title">Conversion de devises</string>
    <string name="conversion_description">Convertir les dollars en euros</string>
    <string name="date_title">Conversion de la date</string>
    <string name="date_description">Afficher la date en version française</string>
    <string name="properties">Propriétés à vendre</string>
    <string name="surface">Surface</string>
    <string name="rooms">Pièces</string>
    <string name="bathrooms">Salles de bains</string>
    <string name="bedrooms">Chambres</string>
    <string name="location">Adresse</string>
    <string name="characteristics">Caractéristiques</string>
    <string name="agent_name">Agent immobilier</string>
    <string name="agent_last_name">Nom  Prénom</string>
    <string name="type_of_property">Type de bien</string>
    <string name="type_exemple">Maison, Appartement, Villa…</string>
    <string name="surface_hint">Nombre de mètres carrés</string>
    <string name="rooms_hint">Nombre de pièces</string>
    <string name="bathrooms_hint">Nombre de salles de bains</string>
    <string name="bedrooms_hint">Nombre de chambres</string>
    <string name="location_hint">Adresse complète ou est localisé le bien immobilier</string>
    <string name="poi">Commodités</string>
    <string name="poi_hint">Commodités à proximité</string>
    <string name="price">Prix</string>
    <string name="price_hint">Prix en dollars</string>
    <string name="description_hint">Description du bien</string>
    <string name="add_pictures">Ajouter des photos</string>
    <string name="validate_information">Valider</string>
    <string name="authentication_failed">L\'authentification a échouée</string>
    <string name="ok_button">OK</string>
    <string name="date_to_buy">Date de mise en vente</string>
    <string name="date_to_sell">Date d\'achat</string>
    <string name="your_position">Vous êtes ici !</string>

    <string name="gps_off">Le GPS est désactivé</string>
    <string name="please_activate_gps">Pour faire fonctionner cette application avec toutes ses fonctionnalités, nous avons besoin que vous activiez votre Gps avec la localisation précise.
        \nNe vous inquiètez pas, nous ne collectons aucune de vos données.</string>
    <string name="cancel">Annuler</string>
    <string name="activate">Activer</string>
    <string name="display_map">Affiche la carte</string>
    <string name="show_map">Carte des biens</string>
    <string name="cancel_button">Cancel</string>
    <string name="display_settings">Parametres</string>
    <string name="error_message">Ce champs ne doit pas être vide</string>
    <string name="image_name">Nom de l\'image</string>
    <string name="delete_image">Supprimer l\'image</string>
    <string name="denial_of_authorization">Authorisation stockage refusée</string>
    <string name="denial_of_location_authorization">Authorisation de localisation refusée</string>
    <string name="menu">Menu</string>
    <string name="contact">Informations</string>
    <string name="information_is_sold">Le bien immobilier a été mis en vente par %s le %s et a été vendu le %s</string>
    <string name="information_on_sale">Le bien immobilier a été mis en vente par %s le %s</string>
    <string name="select_poi">Selectionner les point d\'interet à proximité</string>
    <string name="ok">OK</string>
    <string name="point_of_interest">A proximité</string>
    <string name="description_poi">Ecole, hopital, restaurant…</string>
    <string name="contact_exemple">Vendu 12/02/2023</string>
    <string name="property_added">La propriété a bien été ajoutée</string>
    <string name="property_modified">La propriété a bien été modifiée</string>
    <string name="invalid_address_message">Utilisez une addresse valide svp</string>
    <string name="search_type">Type de propriété recherché</string>
    <string name="type_description">Villa, Manoir, Loft…</string>
    <string name="price_title">Prix</string>
    <string name="adjustement_of_price">Ajustement du prix</string>
    <string name="devise">Price selectionné :</string>
    <string name="area_title">Surface</string>
    <string name="type_of_property_hint">Type de propriété recherché</string>
    <string name="pois_hint">Services à proximité</string>
    <string name="date_old_title">Plus ancien</string>
    <string name="date_recent_title">Plus recent</string>
    <string name="poi_school">Ecole</string>
    <string name="poi_public_transports">Transports public</string>
    <string name="poi_hospital">Hopital</string>
    <string name="poi_shop">Magasin</string>
    <string name="poi_green_spaces">Espaces verts</string>
    <string name="poi_restaurant">Restaurant</string>
    <string name="type_empty">Entrez un type</string>
    <string name="no_property_selected">Selectionnez un bien svp</string>
    <string name="location_permission_denied">Permission de localisation refusée</string>
    <string name="storage_permission_denied">Permission de stockage refusée</string>
    <string name="no_internet_connection">Pas de connexion internet</string>
    <string name="internet_connection">Connection internet active</string>
    <string name="camera_and_storage_rationale">Cette application nécessite des permissions pour accéder à la caméra et à l\'espace de stockage.</string>
    <string name="take_photo_image">Prendre une photo</string>
    <string name="loan_simulator">Simulateur de crédit</string>
    <string name="error_message_duration">Durée ne peut pas être à zéro</string>
    <string name="monthly_payment_text">Paiement mensuel : %1$s%2$.2f</string>
    <string name="bring">Apport (€)</string>
    <string name="taux">Taux (%)</string>
    <string name="duration">Durée (month)</string>
    <string name="calculate">Calculer</string>
    <string name="result">"Résultat : "</string>
    <string name="add_property_please">Ajoutez une propriété avec + </string>
    <string name="favorite">Favorit</string>
    <string name="camera">Camera</string>
    <string name="delete">Supprimer</string>
    <string name="photos">Photos</string>
    <string name="import_button">Ajouter une image</string>
    <string name="camera_button">Prendre une photo</string>
    <string name="not_empty">La description ne peut pas être vide.</string>
    <string name="image_description">Entrez une déscription pour cette image</string>
    <string name="enter_image_description">Entez une description :</string>
    <string name="picture_description">Description de la photo</string>
    <string name="add_description">Ajoutez une description à votre photo</string>
    <string name="description_of_picture">Front, Garden, Swimming pool…</string>
    <string name="add_a_description">Ajoutez une description</string>
    <string name="notification_title">Propriété</string>
    <string name="notification_text">Propriété ajoutée avec succès !</string>
    <string name="searchbar_hint">Entrez un critère de recherche</string>
    <string name="searchbar_description">Entrez un critère de recherche</string>
    <string name="sold_title">Vendu !</string>
    <string name="property_description">%1$s - %2$sm²</string>
    <string name="what_are_you_looking_for">Que recherchez-vous ?</string>
    <string name="photo_required">Au moins une image requise</string>
    <string name="property_not_added">Erreur ! Propriété non ajoutée</string>
    <string name="add_address_with_autocomplete">Une ou plusieurs propriété ont une adresse invalide</string>
    <string name="property_address">Adresse</string>
    <string name="warning_icon">Icone Attention</string>
    <string name="toBeCompleted_title">A completer</string>
    <string name="to_be_completed_title">A completer</string>
    <string name="to_modify_title">A modifier</string>
    <string name="no_property_found">Pas de propriété trouvée</string>
    <string name="search_for_a_property">Recherche de propriété</string>
    <string name="type">Type</string>
    <string name="distance">Distance</string>
    <string name="distance_from_your_location">Distance from your location</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="area">Surface</string>
    <string name="near_the_property">A proximité</string>
    <string name="placed_on_the_market_since">Placé sur le marché depuis</string>
    <string name="less_than_one_month">&lt;1 month</string>
    <string name="less_than_six_month">&lt;6 months</string>
    <string name="more_than_six_month">&lt;1 year</string>
    <string name="property_for_sale_or_sold">Propriétées vendues ou à vendre</string>
    <string name="for_sale">A Vendre</string>
    <string name="sold_only">Vendues</string>
    <string name="clear">Effacer</string>
    <string name="filter">Filtrer</string>
    <string name="all_properties">All properties</string>
    <string name="property_price">Prix : %s €</string>

</resources>