<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_with_id_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin">

        <TextView
            android:id="@+id/media_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media"
            android:textSize="@dimen/default_text_middle_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/carousel_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/default_margin"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/media_textView" />

        <TextView
            android:id="@+id/location_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:drawablePadding="10dp"
            android:text="@string/location"
            android:textSize="@dimen/default_text_middle_size"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_location_on_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carousel_recycler_view" />

        <View
            android:id="@+id/media_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/default_large_margin"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_textView" />

        <!-- Surface -->
        <TextView
            android:id="@+id/surface_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_large_margin"
            android:drawablePadding="10dp"
            android:text="@string/surface"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_settings_overscan_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/media_view" />

        <TextView
            android:id="@+id/surface_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surface_title_textView"
            tools:text="@string/surface" />

        <!-- Rooms -->
        <TextView
            android:id="@+id/rooms_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:drawablePadding="10dp"
            android:text="@string/rooms"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_home_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surface_textView" />

        <TextView
            android:id="@+id/rooms_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginBottom="@dimen/default_margin"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rooms_title_textView"
            tools:text="@string/rooms" />

        <!-- Bathrooms -->
        <TextView
            android:id="@+id/bathrooms_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:drawablePadding="10dp"
            android:text="@string/bathrooms"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_bathtub_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rooms_textView" />

        <TextView
            android:id="@+id/bathrooms_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginBottom="@dimen/default_margin"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bathrooms_title_textView"
            tools:text="@string/bathrooms" />

        <!-- Bedrooms -->
        <TextView
            android:id="@+id/bedrooms_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:drawablePadding="10dp"
            android:text="@string/bedrooms"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/baseline_bed_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bathrooms_textView" />

        <TextView
            android:id="@+id/bedrooms_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginBottom="@dimen/default_margin"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bedrooms_title_textView"
            tools:text="@string/bedrooms" />

        <!-- Static view map -->
        <ImageView
            android:id="@+id/map_imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/default_margin"
            android:contentDescription="@string/map_view"
            app:layout_constraintBottom_toBottomOf="@+id/bedrooms_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bathrooms_title_textView"
            app:layout_constraintTop_toTopOf="@+id/surface_title_textView">

        </ImageView>

        <!-- Point of interest -->
        <View
            android:id="@+id/poi_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/default_large_margin"
            android:layout_marginBottom="@dimen/default_large_margin"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bedrooms_textView" />

        <TextView
            android:id="@+id/poi_text_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/point_of_interest"
            android:textSize="@dimen/default_text_middle_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poi_view" />

        <TextView
            android:id="@+id/poi_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_large_margin"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poi_text_textView"
            tools:text="@string/description_poi" />

        <!-- Description -->
        <View
            android:id="@+id/description_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/default_large_margin"
            android:layout_marginBottom="@dimen/default_large_margin"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poi_textView" />

        <TextView
            android:id="@+id/description_text_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/description"
            android:textSize="@dimen/default_text_middle_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_view" />

        <TextView
            android:id="@+id/description_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_large_margin"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text_textView"
            tools:text="@string/description_exemple" />

        <View
            android:id="@+id/loan_simulator_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/default_large_margin"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_textView" />

        <Button
            android:id="@+id/loan_simulator_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_large_margin"
            android:padding="@dimen/default_large_margin"
            android:text="@string/loan_simulator"
            android:textSize="@dimen/default_text_middle_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loan_simulator_view" />

        <View
            android:id="@+id/contact_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loan_simulator_button" />

        <TextView
            android:id="@+id/contact_text_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/contact"
            android:textSize="@dimen/default_text_middle_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact_view" />

        <TextView
            android:id="@+id/contact_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_large_margin"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact_text_textView"
            tools:text="@string/contact_exemple" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>